; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-writecache.c_wc_add_block.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-writecache.c_wc_add_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.writeback_struct = type { i32, %struct.dm_writecache* }
%struct.dm_writecache = type { i32 }
%struct.wc_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.writeback_struct*, %struct.wc_entry*, i32)* @wc_add_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wc_add_block(%struct.writeback_struct* %0, %struct.wc_entry* %1, i32 %2) #0 {
  %4 = alloca %struct.writeback_struct*, align 8
  %5 = alloca %struct.wc_entry*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.dm_writecache*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.writeback_struct* %0, %struct.writeback_struct** %4, align 8
  store %struct.wc_entry* %1, %struct.wc_entry** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load %struct.writeback_struct*, %struct.writeback_struct** %4, align 8
  %11 = getelementptr inbounds %struct.writeback_struct, %struct.writeback_struct* %10, i32 0, i32 1
  %12 = load %struct.dm_writecache*, %struct.dm_writecache** %11, align 8
  store %struct.dm_writecache* %12, %struct.dm_writecache** %7, align 8
  %13 = load %struct.dm_writecache*, %struct.dm_writecache** %7, align 8
  %14 = getelementptr inbounds %struct.dm_writecache, %struct.dm_writecache* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %8, align 4
  %16 = load %struct.dm_writecache*, %struct.dm_writecache** %7, align 8
  %17 = load %struct.wc_entry*, %struct.wc_entry** %5, align 8
  %18 = call i8* @memory_data(%struct.dm_writecache* %16, %struct.wc_entry* %17)
  store i8* %18, i8** %9, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @persistent_memory_flush_cache(i8* %19, i32 %20)
  %22 = load %struct.writeback_struct*, %struct.writeback_struct** %4, align 8
  %23 = getelementptr inbounds %struct.writeback_struct, %struct.writeback_struct* %22, i32 0, i32 0
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @persistent_memory_page(i8* %24)
  %26 = load i32, i32* %8, align 4
  %27 = load i8*, i8** %9, align 8
  %28 = call i32 @persistent_memory_page_offset(i8* %27)
  %29 = call i64 @bio_add_page(i32* %23, i32 %25, i32 %26, i32 %28)
  %30 = icmp ne i64 %29, 0
  %31 = zext i1 %30 to i32
  ret i32 %31
}

declare dso_local i8* @memory_data(%struct.dm_writecache*, %struct.wc_entry*) #1

declare dso_local i32 @persistent_memory_flush_cache(i8*, i32) #1

declare dso_local i64 @bio_add_page(i32*, i32, i32, i32) #1

declare dso_local i32 @persistent_memory_page(i8*) #1

declare dso_local i32 @persistent_memory_page_offset(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
